--- a/Profile Folder/chrome/frameworks/GeckiumMaterial/styles/partials/_steppers.scss
+++ b/Profile Folder/chrome/frameworks/GeckiumMaterial/styles/partials/_steppers.scss
@@ -38,6 +38,7 @@
 		}
 
 		> label {
+			display: flex;
 			white-space: nowrap;
 		}
 		
@@ -80,8 +81,4 @@
 hbox.stepper {
 	height: 68px;
 	padding-inline: 32px;
-}
-
-vbox.stepper {
-	
 }
